--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docker"]
 	path = docker
-	url = https://github.com/LaraDock/laradock.git
+	url = https://github.com/luciano-jr/laradock.git
