--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,12 @@
         "sebastian/phpcpd": "*",
         "phploc/phploc": "^3.0",
         "squizlabs/php_codesniffer": "^2.6",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "behat/behat": "^3.1",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-browserkit-driver": "~1.2@dev",
+        "laracasts/behat-laravel-extension": "dev-master"
     },
     "autoload": {
         "classmap": [
