--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "luciano-jr/laravel-boilerplate",
+    "description": "The Laravel Framework Boilerplate.",
+    "keywords": ["framework", "laravel", "boilerplate", "start"],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -13,7 +13,21 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "laracasts/generators": "^1.1",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "phpmd/phpmd": "^2.4",
+        "sebastian/phpcpd": "*",
+        "phploc/phploc": "^3.0",
+        "squizlabs/php_codesniffer": "^2.6",
+        "barryvdh/laravel-debugbar": "^2.2",
+        "behat/behat": "^3.1",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-browserkit-driver": "~1.2@dev",
+        "behat/mink-selenium2-driver": "*",
+        "behat/mink-goutte-driver": "*",
+        "laracasts/behat-laravel-extension": "dev-master"
     },
     "autoload": {
         "classmap": [
@@ -37,10 +51,12 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan clear-compiled",
             "php artisan optimize"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan ide-helper:generate",
             "php artisan optimize"
         ]
     },
