--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "laradock"]
 	path = laradock
-	url = git@github.com:LaraDock/laradock.git
+	url = git@github.com:luciano-jr/laradock.git
